#53 Fix mobile view layout issues

--- a/src/assets/sass/components/_content.scss
+++ b/src/assets/sass/components/_content.scss
@@ -7,9 +7,8 @@
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
   position: relative;
-  width: 100%;
 
   @include mq(md) {
     flex-direction: row;
@@ -17,13 +16,15 @@
 }
 
 .content-wrapper {
-  min-height: 100%;
+  height: calc(100% - 64px);
+  overflow-y: auto;
 
   @include themify($themes) {
     background: theme-property(color-content);
   }
 
   @include mq(md) {
+    height: 100%;
     margin-left: $sidebar-width--desktop;
     width: calc(100% - #{$sidebar-width--desktop});
   }
